# eduai-platform

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
agents/: .env.example  README.md  __init__.py  pytest.ini  requirements.txt  test_connection.py  test_retrieval.py
agents/crew/: __init__.py  agents.py  tasks.py  test_crew.py  tools.py  validators.py
agents/data/: eval_ab_results.csv  fizik_newton.txt  seed_corpus.txt  seed_corpus_hard.txt  tarih_tanzimat.txt
agents/graph/: __init__.py  edges.py  llm.py  nodes.py  pipeline.py  state.py
agents/memory/: __init__.py
agents/rag/: __init__.py  embeddings.py  indexer.py  retriever.py
agents/scripts/: embedding_benchmark.py  embedding_benchmark_hard.py  eval_ab.py  index_seed.py
agents/tests/: __init__.py  conftest.py  test_embed_cache.py  test_pipeline.py  test_rag.py  test_validators.py
docs/: newsession.md
docs/p1/: CONCEPT.md  IMPLEMENTATION_NOTES.md  IMPLEMENTATION_NOTES_ARCHIVED.md  P2_HANDOFF.md  (+2 more)
ml/: .env.example  README.md  requirements.lock.txt  requirements.txt
services/api/: .dockerignore  Dockerfile  pyproject.toml  requirements-dev.txt  requirements.txt
services/api/app/: dependencies.py  main.py
services/api/app/core/: config.py
services/api/app/routers/: documents.py  questions.py  sessions.py
services/api/app/schemas/: documents.py  questions.py  sessions.py
services/api/app/services/: document_service.py  question_service.py  session_service.py
services/api/tests/: conftest.py  test_documents.py  test_health.py  test_questions.py  test_sessions.py
(+30 files in other folders)
